--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,12 +52,12 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
-    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
-    implementation "com.squareup.retrofit2:converter-moshi:2.3.0"
-    implementation "com.squareup.moshi:moshi:1.6.0"
-    implementation "com.squareup.moshi:moshi-kotlin:1.6.0"
-    kapt "com.squareup.moshi:moshi-kotlin-codegen:1.6.0"
+    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
+    implementation 'com.squareup.moshi:moshi:1.11.0'
+    implementation 'com.squareup.moshi:moshi-kotlin:1.11.0'
+    kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.11.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.afollestad.material-dialogs:core:3.1.0'
@@ -67,7 +67,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'org.koin:koin-android:2.0.0-rc-2'
     implementation 'org.koin:koin-android-viewmodel:2.0.0-rc-2'
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5"
 
     def lifecycle_version = "2.2.0"
@@ -79,15 +79,15 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
-    testImplementation "com.google.truth:truth:0.44"
+    testImplementation 'com.google.truth:truth:1.0.1'
     testImplementation 'androidx.arch.core:core-testing:2.1.0'
-    testImplementation "io.mockk:mockk:1.9.3"
+    testImplementation 'io.mockk:mockk:1.10.2'
     testImplementation 'androidx.test:core:1.3.0'
     testImplementation 'org.koin:koin-test:2.0.0-rc-2'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.0-M2'
-    testImplementation "org.junit.platform:junit-platform-runner:1.6.2"
-    testImplementation "org.junit.jupiter:junit-jupiter-api:5.6.2"
-    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.6.2"
+    testImplementation 'org.junit.platform:junit-platform-runner:1.7.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test:core:1.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
