--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,10 +64,12 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
 
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'org.koin:koin-android:2.0.1'
-    implementation 'org.koin:koin-android-viewmodel:2.0.1'
+    def koin_version = "2.0.1"
+    implementation "org.koin:koin-android:$koin_version"
+    implementation "org.koin:koin-android-viewmodel:$koin_version"
+
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.7"
 
     def lifecycle_version = "2.2.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
@@ -82,7 +84,7 @@ dependencies {
     testImplementation 'androidx.arch.core:core-testing:2.1.0'
     testImplementation 'io.mockk:mockk:1.10.2'
     testImplementation 'androidx.test:core:1.3.0'
-    testImplementation 'org.koin:koin-test:2.0.0-rc-2'
+    testImplementation "org.koin:koin-test:$koin_version"
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.0-M2'
     testImplementation 'org.junit.platform:junit-platform-runner:1.7.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
@@ -91,7 +93,7 @@ dependencies {
     androidTestImplementation 'androidx.test:core:1.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     androidTestImplementation 'com.android.support.test:rules:1.0.2'
-    androidTestImplementation 'org.koin:koin-test:2.0.0-rc-2'
+    androidTestImplementation "org.koin:koin-test:$koin_version"
     androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.0-M2'
 
 }
