--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,14 +5,14 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".presenter.ChuckNorrisApplication"
+        android:name=".presentation.ChuckNorrisApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".presenter.view.ChuckNorrisFactsActivity">
+        <activity android:name=".presentation.view.ChuckNorrisFactsActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
