--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -18,4 +18,4 @@ jobs:
         with: 
           java-version: 1.8
       - name: Run Unit Test
-        run: bash ./gradlew test
+        run: bash ./gradlew clean test
