--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -7,9 +7,9 @@ on:
     branches: [ main ]
 
 jobs:
-  test:
+  build-and-tests:
     name: CI
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
       - name: Checkout project
         uses: actions/checkout@v2
@@ -18,7 +18,7 @@ jobs:
         with: 
           java-version: 1.8
       - name: Run unit tests
-        run: bash ./gradlew clean test
+        run: ./gradlew clean test
       - name: Run instrumentation tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
