Created feature of facts search

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,11 @@ android {
         sourceCompatibility = "8"
     }
 
+    testOptions {
+        unitTests.all {
+            useJUnitPlatform()
+        }
+    }
 }
 
 dependencies {
