--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,9 @@ out/
 # Gradle files
 .gradle/
 build/
+/.idea/*
+*/*/build
+*/build
 
 # Local configuration file (sdk path, etc)
 local.properties
