--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build-and-tests:
     name: CI
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
       - name: Checkout project
         uses: actions/checkout@v2
@@ -19,18 +19,16 @@ jobs:
           java-version: 1.8
       - name: Run unit tests
         run: ./gradlew clean test
-#       - name: Run instrumentation tests
-#         uses: reactivecircus/android-emulator-runner@v2
-#         with:
-#           api-level: 26
-#           arch: x86
-#           profile: Nexus 6
-#           avd-name: test
-#           emulator-options: -no-window -gpu swiftshader_indirect -no-snapshot -noaudio -no-boot-anim -camera-back none
-#           disable-animations: true
-#           script: ./gradlew data:connectedCheck
-      - name: Run UI Tests
-        uses: vgaidarji/android-github-actions-emulator@v1.0.1
+      - name: Run instrumentation tests
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: 26
+          arch: x86
+          profile: Nexus 6
+          avd-name: test
+          emulator-options: -no-window -gpu swiftshader_indirect -no-snapshot -noaudio -no-boot-anim -camera-back none
+          disable-animations: true
+          script: ./gradlew data:connectedCheck
       - name: Generate APK
         run: ./gradlew assembleDebug
       - name: Rename APK
