create common module

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -23,33 +23,19 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-
     kotlinOptions {
         jvmTarget = '1.8'
-    }
-
-    packagingOptions {
-        exclude 'META-INF/*'
     }
 }
 
 dependencies {
     def dependencies = rootProject.ext.dependencies
-
-    implementation project(':data')
-    implementation project(':common')
-
     implementation dependencies.kotlin
-
-    implementation dependencies.koin
-
-    implementation dependencies.coroutinesCore
-    implementation dependencies.coroutinesAndroid
+    implementation dependencies.ktx
 
     testImplementation dependencies.mockk
     testImplementation dependencies.googleTruth
