--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ dependencies {
 
     implementation project(':domain')
     implementation project(':data')
+    implementation project(':common')
 
     implementation dependencies.kotlin
 
