--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,7 +51,8 @@ dependencies {
 
     implementation project(':domain')
     implementation project(':data')
-    implementation project(':common')
+    implementation project(':common-kotlin')
+    implementation project(':common-android')
 
     implementation dependencies.kotlin
 
