--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -1,52 +1,26 @@
 plugins {
-    id 'com.android.library'
-    id 'kotlin-android'
+    id 'java-library'
+    id 'kotlin'
+    id 'kotlin-kapt'
 }
 
-android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.2"
-
-    defaultConfig {
-        minSdkVersion 19
-        targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles "consumer-rules.pro"
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
-
-    packagingOptions {
-        exclude 'META-INF/*'
-    }
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
 }
 
 dependencies {
     def dependencies = rootProject.ext.dependencies
 
-    implementation project(':data')
-    implementation project(':common')
+    implementation project(':common-kotlin')
 
     implementation dependencies.kotlin
 
     implementation dependencies.koin
+
+    implementation dependencies.moshi
+    implementation dependencies.moshiKotlin
+    kapt dependencies.moshiCodegen
 
     implementation dependencies.coroutinesCore
     implementation dependencies.coroutinesAndroid
