Create module common-android and common-kotlin

--- a/common-android/build.gradle
+++ b/common-android/build.gradle
@@ -46,4 +46,10 @@ dependencies {
 
     implementation dependencies.glide
     annotationProcessor dependencies.glideCompiler
+
+    testImplementation dependencies.mockk
+    testImplementation dependencies.googleTruth
+    testImplementation dependencies.junitRunner
+    testImplementation dependencies.junitJupiter
+    testRuntimeOnly dependencies.junitJupiterEngine
 }
